--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
 	<body>
 		<div class="reveal">
 			<div class="slides">
-				<section>Slide 1</section>
-				<section>Slide 2</section>
+				<section data-markdown="slides.md"
+					data-separator-vertical="^\r?\n--\r?\n$"
+					data-separator-notes="^Note:"
+					data-charset="utf-8">
+	   			</section>
 			</div>
 		</div>
 
